# pytest-framework-api

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  settings.py
.github/workflows /: flake8.yaml  mypy.yaml  pylint.yaml  ruff.yaml
tests/: conftest.py  test_booking.py
utils/: assertions.py  random_generator.py  routes.py
utils/api/: auth.py  booking.py
utils/clients/http/: builder.py  client.py
utils/models/: auth.py  booking.py
utils/validate/: schema.py
